# aus-crypto-capital-gains-calculator

./: .gitignore  Cargo.toml  README.md  main.py
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: lib.rs
calculator/: Cargo.toml
calculator/src/: fifo.rs  lib.rs  traits.rs
cli/: Cargo.toml
cli/src/: main.rs
data/: .gitignore  fake.csv  incomplete.csv
gui/: Cargo.toml
gui/src/: main.rs
reader/: Cargo.toml
reader/src/: coinjar.rs  coinjar_simple.rs  lib.rs  mod.rs  mystery.rs  traits.rs
types/: Cargo.toml
types/src/: lib.rs
